@@ -405,9 +405,11 @@ gearmand_error_t gearman_server_job_queue(gearman_server_job_st *job)
         {
           gearmand_log_gerror_warn(GEARMAN_DEFAULT_LOG_PARAM, ret, "Failed to send NOOP packet to %s:%s", worker->con->host(), worker->con->port());
         }
-
-        worker->con->is_noop_sent= true;
-        noop_sent++;
+        else
+        {
+          worker->con->is_noop_sent= true;
+          noop_sent++;
+        }
       }
 
       worker= worker->function_next;
